--- a/src/app/Compartido/home/home.component.html
+++ b/src/app/Compartido/home/home.component.html
@@ -52,3 +52,26 @@
         <h2 class="buscador-segunda-descripicon">Contamos con una bolsa de empleos con todas las ofertas de Chuquisaca</h2>
     </div>
 </div>
+<div class="ofertas-recientes">
+    <div fxLayoutAlign="center"  >
+        <h1 class="ofertas-recientes-titulo">Ofertas Recientes</h1>
+    </div>
+    <div fxLayoutAlign="center">
+        <mat-card class="ofertas-recientes-card">
+            <img mat-card-image class ="ofertas-recientes-card-image" src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
+            <mat-card-content>
+                <mat-card-title>
+                    Cargo empleo
+                </mat-card-title>
+                <mat-card-subtitle>
+                    Nombre empresa
+                </mat-card-subtitle>
+                <span>Fecha de publicacion</span>
+            </mat-card-content>
+        </mat-card>
+        
+        
+        <
+    </div>
+
+</div>
