--- a/src/app/Compartido/home/home.component.css
+++ b/src/app/Compartido/home/home.component.css
@@ -65,18 +65,35 @@
 }
 .ofertas-recientes-card{
     
-    box-shadow:   15px 15px 20px rgba(255, 255, 255, 0.158);
-    background-color: #1e1e1e;
+    box-shadow:   5px 5px 50px rgba(163, 163, 163, 0.158);
+    background-color: #2b2b2b;
     margin-bottom: 100px;
-    max-width: 500px;
-    max-width: auto;
-    
+    max-width: 600px;
+    margin: 50px;
 }
 .ofertas-recientes-card-image{
     
-    height: 200px;
+    height: 150px;
     width: 500px;
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
+}
+.card-titulo{
+    color: white;
+    font-size: 28px;
+    font-weight: bolder;
+}
+.card-subtitulo{
+    color: white;
+    font-size: 22px;
+}
+.card-fecha{
+    color: #33bbd1;
+    font-size: 15px;
+}
+.card-boton{
+    background-color:#142f3f;
+    width: 50%;
+    color: white;
 }
