--- a/src/app/Compartido/ingresar/ingresar.component.html
+++ b/src/app/Compartido/ingresar/ingresar.component.html
@@ -1,1 +1,18 @@
-<p>ingresar works!</p>
+
+ <div class="registro-contenedor" fxLayoutRows="center">
+    <div>
+        <h1 class="registro-contenedor-titulo">Iniciar sesión</h1>
+     </div>
+    <div class="registro-contenedor-formulario">
+        <form action="">
+            <mat-form-field appearance="fill" class="formulario-inputs">
+                <mat-label>Correo</mat-label>
+                <input matInput>
+            </mat-form-field><br>
+            <mat-form-field appearance="fill" class="formulario-inputs">
+                <mat-label>Contraseña</mat-label>
+                <input matInput type="password">
+            </mat-form-field><br>     
+        </form>
+    </div> 
+</div> 
