--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,9 @@
     <div>
         <router-outlet></router-outlet>
     </div>
+    <div>
+        <app-pie-de-pagina></app-pie-de-pagina>
+    </div>
 </div>
 
 
