--- a/src/app/Compartido/menu/menu.component.html
+++ b/src/app/Compartido/menu/menu.component.html
@@ -15,11 +15,62 @@
       </div> 
       <div>
 
-        <button class="toolbar-boton" mat-button (click)="navegar('')">Inicio</button>
+        <!-- sin logear -->
 
-        <button class="toolbar-boton" mat-button (click)="navegar('ingresar')">Ingresar</button>
+        <app-autorizado [rol]="' '" >
+          <ng-container Autorizado>
+            <button class="toolbar-boton" mat-button (click)="navegar('')">Inicio</button>
 
-        <button class="toolbar-boton" mat-button (click)="navegar('registrarse')">Registrarse</button>
+            <button class="toolbar-boton" mat-button (click)="navegar('ingresar')">Ingresar</button>
+
+            <button class="toolbar-boton" mat-button (click)="navegar('registrarse')">Registrarse</button>
+          </ng-container>
+        </app-autorizado >
+
+        <!-- empresas -->
+
+        <app-autorizado [rol]="'empresas'">
+          <ng-container Autorizado>
+            <button class="toolbar-boton" mat-button (click)="navegar('empresas/publicar-empleo')">Publicar Empleo</button>
+
+            <button class="toolbar-boton" mat-button (click)="navegar('empresas/postulantes')">Postulantes</button>
+  
+            <button class="toolbar-boton" mat-button (click)="navegar('empresas/empleos-publicados')">Empleos Publicados</button>
+
+            <button class="toolbar-boton" mat-button (click)="navegar('empresas/perfil')">Perfil</button>
+          </ng-container>
+        </app-autorizado >
+
+        <!-- postulantes -->
+        <app-autorizado [rol]="'postulantes'">
+          <ng-container Autorizado>
+
+            <button class="toolbar-boton" mat-button (click)="navegar('buscar-empleo')">Buscar empleo</button>
+
+            <button class="toolbar-boton" mat-button (click)="navegar('postulantes/postulaciones')">postulaciones</button>
+
+            <button class="toolbar-boton" mat-button (click)="navegar('postulantes/empleos-guardados')">Empleos guardados</button>
+
+            <button class="toolbar-boton" mat-button (click)="navegar('postulantes/perfil')">Perfil</button>
+
+          </ng-container>
+        </app-autorizado>
+        
+        <!-- administrador -->
+        <app-autorizado [rol]="'administrador'">
+          <ng-container Autorizado>
+
+            <button class="toolbar-boton" mat-button (click)="navegar('administrador/administrar-usuarios')">usuarios</button>
+
+            <button class="toolbar-boton" mat-button (click)="navegar('administrador/administrar-publicaciones')">publicaciones</button>
+
+            <button class="toolbar-boton" mat-button (click)="navegar('administrador/administrar-tablas')">tablas</button>
+
+            <button class="toolbar-boton" mat-button (click)="navegar('administrador/informe-de-datos')">informe de datos</button>
+
+          </ng-container>
+        </app-autorizado>
+
       </div>
      
     </mat-toolbar>
