--- a/src/app/Compartido/menu/menu.component.css
+++ b/src/app/Compartido/menu/menu.component.css
@@ -12,3 +12,18 @@
 .toolbar-boton:hover{
     color:#33bbd1;
 }
+
+.example-header-image {
+    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+    background-size: cover;
+  }
+
+
+  .avatar2{
+    margin-top: 30px;
+    width: 50px;
+    height: 50px;
+    size: cover;
+    border-radius: 50%;
+    border: solid white;
+  }
