--- a/src/app/Compartido/registrarse/registro-empresas/registro-empresas.component.html
+++ b/src/app/Compartido/registrarse/registro-empresas/registro-empresas.component.html
@@ -8,11 +8,11 @@
 
         <form (submit)="registrar(form.value)"  [formGroup]="form">
 
-            <mat-form-field appearance="fill" class="formulario-inputs">
-                <mat-label>Nombre de la empresa</mat-label>
+            <!-- <mat-form-field appearance="fill" class="formulario-inputs">
+                <mat-label>UserName de la empresa</mat-label>
                 <input matInput formControlName="userName">
                 <mat-error>{{obtenerError()}}</mat-error>
-            </mat-form-field><br>
+            </mat-form-field><br> -->
 
 
             <mat-form-field appearance="fill" class="formulario-inputs">
